start fixing alignment plugin

--- a/app/src/interfaces/input-block-editor/editorjs-overrides.css
+++ b/app/src/interfaces/input-block-editor/editorjs-overrides.css
@@ -465,6 +465,18 @@
 	margin-left: 34px;
 }
 
+.codex-editor .ce-align-left {
+	text-align: left;
+}
+
+.codex-editor .ce-align-center {
+	text-align: center;
+}
+
+.codex-editor .ce-align-right {
+	text-align: right;
+}
+
 .codex-editor .ce-header {
 	padding: 0.4em 0;
 }
